# bazel-cdk-demo

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  BUILD.patch  README.md  WORKSPACE  cdk.json  go.mod  go.sum  jest.config.js  manifest.bzl  package-lock.json  package.json  test.bzl  tsconfig.json
.dependabot/: config.yml
.github/workflows/: bazel.yml
lambdas/demo/: BUILD.bazel  main.go
lambdas/demo2/: BUILD.bazel  main.go
lib/: BUILD.bazel  app.ts  codebuild-example.ts  deployable.test.ts  deployable.ts  environments.ts  minimum-viable-stack.ts  pipeline-monitor.ts
manifester/: BUILD.bazel  main.go
scripts/: cdk
tasks/hello/: BUILD.bazel  README.md  main.go
