load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@com_github_bazelbuild_rules_pkg//pkg:pkg.bzl", "pkg_zip")
load("//:manifest.bzl", "lambda_manifest")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kindlyops/bazel-cdk-demo/lambdas/demo",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_lambda_go//events:go_default_library",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/endpoints:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/secretsmanager:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

pkg_zip(
    name = "lambda_deploy",
    srcs = [
        ":main",
    ],
    build_zip = "@com_github_bazelbuild_rules_pkg//pkg:build_zip",
    timestamp = 0,
    visibility = ["//visibility:public"],
)

lambda_manifest(
    name = "manifest",
    srcs = [
        ":lambda_deploy",
    ],
)

# [
#     {
#     "type": "aws:cdk:asset",
#     "data": {
#         "path": "asset.42119a65dc8e026d9c36f2ccacfb49b84797a331d78ff2221ebd35974ed88c6c.zip",
#         "id": "ContinuousDeliveryPipelineBuildADeploymentMonitorFunctionCode36CFF323",
#         "packaging": "file",
#         "sourceHash": "42119a65dc8e026d9c36f2ccacfb49b84797a331d78ff2221ebd35974ed88c6c",
#         "s3BucketParameter": "DeploymentMonitorFunctionCodeS3BucketCC71B606",
#         "s3KeyParameter": "DeploymentMonitorFunctionCodeS3VersionKeyE6A6D74F",
#         "artifactHashParameter": "DeploymentMonitorFunctionCodeArtifactHashEB1D59DE"
#     }
# }
# ]
