load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kindlyops/bazel-cdk-demo/lambdas/demo",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_lambda_go//events:go_default_library",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/endpoints:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/secretsmanager:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)

genrule(
    name = "lambda_zip",
    srcs = [":main"],
    outs = ["lambda_deploy.zip"],
    cmd = "$(location @bazel_tools//tools/zip:zipper) c $@ main=$<",
    tools = ["@bazel_tools//tools/zip:zipper"],
    visibility = ["//visibility:public"],
)
